k8s/service4/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service4-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service4
  template:
    metadata:
     labels:
       app: service4
    spec:
      containers:
        - image: service4:0.1
          imagePullPolicy: Never
          name: service4
          ports:
            - containerPort: 8080
