k8s/service4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service4-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: service4
