k8s/service4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service4-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/service4
            pathType: "Prefix"
            backend:
              service:
                name: service4-service
                port:
                  number: 80
